<resources>
    <string name="app_name">Media Player</string>
    <string name="mm_version">MM-Product-AN Version-1.4.2</string>
    <string name="back">Back</string>
    <string name="folder">Folder</string>
    <string name="rootDirectory">/mnt/usb</string>
    <string name="sambarootDirectory">/mnt/samba</string>
    <string name="unsupport_format">This format is not supported</string>
    <string name="exit_ok">OK</string>
    <string name="exit_cancel">Cancel</string>
    <string name="current_time">Current Time :</string>
    <string name="total_duration">Total Time :</string>
    <string name="choice">Navigate</string>
    <string name="confirm">Select</string>
    <string name="exit_title">Exit</string>
    <string name="exit_confirm">Confirm remove it?</string>
    <string name="the_first_file">This is The First File!</string>
    <string name="the_last_file">This Is The Last File!</string>
    <string name="net_disconnect">The Net Is Disconnected,Please Check!</string>
    <string name="display_pip">Display PIP</string>
    <string name="hide_pip">Hide PIP</string>
    <string name="pre_channel">Previous Channel</string>
    <string name="next_channel">Next Channel</string>
    <string name="max_tip">Reached Maxmium Scale Ratio!</string>
    <string name="min_tip">Reached Minimum Scale Ratio!</string>
    <string name="busy_tip_notice">Loading,Please Wait!</string>
    <string name="busy_tip">The System Is Busy,Please Retry Later!</string>
    <string name="picture">Picture</string>
    <string name="song">Song</string>
    <string name="video">Video</string>
    <string name="samba">Samba</string>
    <string name="dlna">DLNA</string>
    <string name="other">Other</string>
    <string name="all">All</string>
    <string name="page_up">Page Up</string>
    <string name="page_down">Page Down</string>
    <string name="samba_usr">User Name:</string>
    <string name="samba_pwd">Password:</string>
    <string name="samba_confirm">Login</string>
    <string name="samba_cancel">Cancel</string>
    <string name="slash">/</string>
    <string name="loading_top">Loading Top Page,Please Wait</string>
    <string name="loading_usb_device">Loading USB Device</string>
    <string name="loading_local_resource">Loading Local Resource, Please Wait</string>
    <string name="loading_dlna_device">Loading DLNA Device, Please Wait</string>
    <string name="loading_dlna_resource">Loading DLNA Resource, Please Wait</string>
    <string name="miss_dlna_device">Load DLNA Resource Failed</string>
    <string name="loading_samba_device">Loading SAMBA Device, Please Wait</string>
    <string name="loading_samba_resource">Loading SAMBA Resource, Please Wait</string>
    <string name="miss_samba_device">Load SAMBA Resource Failed</string>
    <string name="is_scanning_disc">It is scanning disc!</string>
    <string name="login_wrong_password">Wrong Password</string>
    <string name="login_failed">Failed To Login SAMBA</string>
    <string name="login_other_failed">Login SAMBA Exception</string>
    <string name="login_title">Login</string>
    <string name="network_connect_failed">Connect To Device Failed, Cannot Share Network Resources</string>
    <string name="network_unconnected">Unconnected Network, Please Check And Retry

    </string>
    <string name="login_samba">Login Samba, Please Wait</string>
    <string name="logging_out_samba">Logouting Samba, Please Wait</string>
    <string name="login_success">Login Samba Successful</string>
    <string name="mount_failed">Mount Samba Failed</string>
    <string-array name="data_source">
        <item>local disk device</item>
        <item>network SAMBA device</item>
        
    </string-array>
    <string name="file_name">File Name:</string>
    <string name="photo_info">Photo Info</string>
    <string name="file_create_time">Create Time:</string>
    <string name="file_size">File Size:</string>
    <string name="file_format">File Format:</string>
    <string name="file_resolution">Resolution:</string>
    <string name="display_img_name">name of display picture</string>
    <string name="disk_eject">disk eject</string>
    <string name="photo_3D_toast">not to operate in 3D mode</string>
    <string name="photo_set_wallpaper">photo wallpaper</string>
    <string name="first_photo">first photo!</string>
    <string name="last_photo">last photo!</string>
    <string name="can_not_decode">The photo is too large to be analysised!</string>
    <string name="current_pic">Current picture is:</string>
    <string name="is_setting_wallpaper">It is setting wallpaper,please wait...</string>
    <string name="picture_can_not_decode">This picture can not decode!</string>
    <string name="picture_decoding">picture is decoding...</string>
    <string name="picture_wallpaper">Wallpaper is setting...</string>
    <string name="picture_decode_failed">picture decode failed!</string>
    <string name="picture_can_not_set3d">is not 3D picture!</string>
    <string name="picture_playing_time">playing interval time</string>
    <string name="picture_animation_setting">animation effect</string>
    <string name="photo_GIF_toast">not to operate in GIF animation mode</string>
    <string name="photo_out_of_memory_toast">Low Memory!</string>
    <string name="photo_scale_or_rotate_toast">not to operate in scale or rotate mode</string>
    <string name="photo_pan_success_toast">image pan successfully!</string>
    <string name="photo_pan_failed_toast">image pan failed!</string>
    <string name="photo_pan_parameter_invalid">image pan parameter invalid!</string>
    <string name="not_supported_3D_this_platform">not support 3D in the platform!</string>
    <string name="photo_media_play_next">Continue to play next photo?</string>
    <string name="file_not_support">The file is not supported</string>
    <string name="photo_not_support_scale">The platform memory is too low to support scale!</string>
    <string name="photo_setwallpaper_succ">Set wallpaper Success!</string>
    <string name="photo_setwallpaper_fail">Set wallpaper Fail!</string>
    <string name="music_info">Music Info</string>
    <string name="file_duration">File Duration:</string>
    <string name="music_default_time">00:00</string>
    <string name="Artist_name">Artist Name:</string>
    <string name="file_path">File Path:</string>
    <string name="none_lyrics_find">Did not find lyrics!</string>
    <string name="unknown">Unknown</string>
    <string name="singer">Singer:</string>
    <string name="current_song">Current song:</string>
    <string name="exit_music_play">Determine the music played out?</string>
    <string name="alert">Alert</string>
    <string name="music_media_play_next">Continue to play next music?</string>
    <string name="no_video_track">none video track</string>
    <string name="audio_codec">Audio Codec:</string>
    <string name="video_codec">Video Codec:</string>
    <string name="duration">Duration:</string>
    <string name="default_time">--:--:--</string>
    <string name="video_default_time">00:00:00</string>
    <string name="choose_time_0">0</string>
    <string name="choose_time_colon">:</string>
    <string name="programe_info">Video Info</string>
    <string name="show_info">Play Error </string>
    <string name="buffering">Buffering...</string>
    <string name="playing">Playing</string>
    <string name="video_subtitle">Video Subtitle</string>
    <string name="video_track">Video Track</string>
    <string name="picture_mode">Picture Mode</string>
    <string name="video_mode">Sound Setting</string>
    <string name="video_surround">Surround</string>
    <string name="video_spdif">SPDIF Output</string>
    <string name="music_equalizer">Equalizer</string>
    <string name="Color_tem">Color Temperature</string>
    <string name="noise_resuction">Noise Reduction</string>
    <string name="video_thumbnail_mode">thumbnail mode</string>
    <string name="video_rotate_mode">rotate mode</string>
    <string name="video_channel">video channel</string>
    <string name="video_media_full_resize">video full resize</string>
	<string name="video_media_play_next">Continue to play next video?</string>
    <string name="video_media_default">video default size</string>
    <string name="video_media_full">video full size</string>
    <string name="video_media_error_unknown">video media error unknown</string>
    <string name="video_media_error_malformed">video media error malformed</string>
    <string name="video_media_error_io">video media error io</string>
    <string name="video_media_error_unsupported">video media error unsupported</string>
    <string name="video_media_error_format_unsupport">video media error format unsupport</string>
    <string name="video_media_error_not_connected">video media error not connected</string>
    <string name="video_media_error_audio_unsupport">video media error audio unsupport</string>
    <string name="video_media_error_video_unsupport">video media error video unsupport</string>
    <string name="video_media_error_no_license">video media error no license</string>
    <string name="video_media_error_license_expired">video media error license expired</string>
    <string name="video_media_other_error_unknown">other unknown error</string>
    <string name="video_media_error_not_valid">video media error not valid</string>
    <string name="video_media_error_server_died">media server died</string>
    <string name="video_media_infor_no_index">video no index,it not seeked</string>
    <string name="video_media_infor_no_index_ab">video no index,it not set AB</string>
    <string name="video_media_do_forward_info">please do not ff too frequently! interval should > 600 ms</string>
    <string name="video_audio_track_switch_info">please do not change audio track too frequently!</string>
    <string name="video_thumbnail_switch_info">please do not open/close thumbnail mode too frequently!</string>
    <string name="video_no_support_two_4k">Does not support the two 4k video.</string>
    <string name="video_no_support_seamless_dualscreen">Seamless play in dual mode is unsupported!</string>
    <string name="video_iso_tip">Not supported by the blu-ray ISO file! </string>
    <string name="open_file_fail">Unable to open the file! </string>
    <string name="subtitle_type">Subtitle Type</string>
    <string name="subtitle_out_path">subtitle out path</string>
    <string name="subtitle_in_no">Subtitle Number</string>
    <string name="subtitle_language">Subtitle Language</string>
    <string name="subtitle_color">Subtitle Color</string>
    <string name="subtitle_font">Subtitle Font</string>
    <string name="subtitle_font_size">Subtitle Font Size</string>
    <string name="subtitle_frame">Subtitle Frame</string>
    <string name="subtitle_area">Subtitle Area</string>
    <string name="subtitle_adjust">Subtitle Adjust</string>
    <string name="subtitleList">Subtitle List</string>
    <string name="subtitle_unit">ms</string>
    <string name="playList">PlayList</string>
    <string name="playmusictip">Press Menu to remove the music from list</string>
    <string name="playtip">Press Menu to remove the video from list</string>
    <string name="subtitle_setting">Subtitle Setting</string>
    <string name="a_b_section_repeat">A-B Section Repeat</string>
    <string name="section_replay">Section Replay</string>
    <string name="set_begin_a">Set Point A</string>
    <string name="set_begin_b">Set Point B</string>
    <string name="video_mode_balance">Balance</string>
     <string name="music_sound_setting">Sound Setting</string>
    <string name="edit_copy">Copy</string>
    <string name="edit_delete">Delete</string>
    <string name="edit_move">Move</string>
    <string name="edit_paste">Paste</string>
    <string name="edit_rename">Rename</string>
    <string name="str_cancel">Cancel</string>
	<string name="str_copystop">Stop Copy</string>
	<string name="str_source">Source: </string>
    <string name="str_target">Target: </string>
</resources>