<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/set_bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/music_sound_setting"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/line" >
        </ImageView>

        <LinearLayout
            android:id="@+id/music_eq_model"
			style="@style/video_music_item_lay_sty"
            android:layout_marginTop="10dip"
            android:nextFocusUp="@+id/music_eq" >

            <TextView
                style="@style/video_music_item_name_sty"
                android:text="@string/video_mode"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dip"
                android:src="@drawable/left" />

            <TextView
                android:id="@+id/music_eq_model_val"
                style="@style/video_music_item_val_sty"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dp"
                android:src="@drawable/right" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/music_surround_model"
            style="@style/video_music_item_lay_sty" >
            <TextView
                style="@style/video_music_item_name_sty"
                android:text="@string/video_surround" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dip"
                android:src="@drawable/left" />
            <TextView
                android:id="@+id/music_surround_model_val"
                style="@style/video_music_item_val_sty" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dp"
                android:src="@drawable/right" />
        </LinearLayout>

		<LinearLayout
		    android:id="@+id/music_spdif_model"
		    style="@style/video_music_item_lay_sty" >
            <TextView
                style="@style/video_music_item_name_sty"
                android:text="@string/video_spdif"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dip"
                android:src="@drawable/left" />

            <TextView
                android:id="@+id/music_spdif_model_val"
                style="@style/video_music_item_val_sty"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dp"
                android:src="@drawable/right" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/music_balance_model"
            style="@style/video_music_item_lay_sty" >
            <TextView
                style="@style/video_music_item_name_sty"
                android:text="@string/video_mode_balance"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dip"
                android:src="@drawable/left" />

            <TextView
                android:id="@+id/music_balance_val"
               style="@style/video_music_item_val_sty"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dip"
                android:layout_marginRight="7dp"
                android:src="@drawable/right" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/music_eq"
            style="@style/video_music_item_lay_sty"
            android:nextFocusDown="@+id/music_eq_model" >

            <TextView
                android:id="@+id/music_eq_name"
                style="@style/video_music_item_name_sty"
                android:text="@string/music_equalizer"/>
        </LinearLayout>
		<TextView 
		    android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:focusable="false"
            android:enabled="false"
            android:clickable="false"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dp"
            android:background="@drawable/line" >
        </ImageView>
    </LinearLayout>

</LinearLayout>
