<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"> 
		<LinearLayout
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content" 
		  android:layout_marginTop="10dp"
		  android:orientation="horizontal">
			<TextView 
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="20dip"
			    android:text="@string/str_source"
			    android:textColor="@android:color/black"
			    android:textSize="17sp"
			    android:gravity="left"/>
			 <TextView 
			    android:id="@+id/source_Text"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="5dip"
			    android:textSize="14sp"
			    android:textColor="@android:color/black"
			    android:gravity="left"/>
		</LinearLayout>
		
		<LinearLayout
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content" 
		  android:layout_marginTop="5dp"
		  android:orientation="horizontal">
			<TextView 
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:textSize="17sp"
			    android:layout_marginLeft="20dip"
			    android:text="@string/str_target"
			    android:textColor="@android:color/black"
			    android:gravity="left"/>
			 <TextView 
			    android:id="@+id/target_Text"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="5dip"
			    android:textColor="@android:color/black"
			    android:textSize="14sp"
			    android:gravity="left"/>
		</LinearLayout>
		
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:layout_marginTop="10dp"
				android:orientation="horizontal">
				<TextView android:id="@+id/temp0"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:focusable="false"/>
		  		<ProgressBar
		  			android:id="@+id/one_copy_percent" 
					android:layout_height="20dip" 
					android:layout_width="0dp" 
					android:layout_gravity="center" 
					android:layout_weight="20"
					android:max="100" 
					android:progress="0" 
					android:focusable="false"
					android:clickable="false"
					style="?android:attr/progressBarStyleHorizontal"/>  
				<TextView android:id="@+id/one_percent_Text"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:textColor="@android:color/black"
					android:layout_weight="2.3"
					android:focusable="false"/>
		</LinearLayout>
		
		 <TextView 
		    android:id="@+id/temp1"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_marginLeft="10dip"
		    android:layout_marginRight="10dip"
		    android:gravity="left"
		    android:focusable="false"/>
		<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:orientation="horizontal">
				<TextView android:id="@+id/temp2"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"/>
				<ProgressBar
		  			android:id="@+id/all_copy_percent" 
		       	 	android:layout_height="20dip" 
					android:layout_width="0dp" 
					android:layout_gravity="center" 
					android:layout_weight="20"
					android:max="100" 
					android:progress="0" 
					style="?android:attr/progressBarStyleHorizontal"/>  
				<TextView  android:id="@+id/all_percent_Text"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:textColor="@android:color/black"
					android:layout_weight="2.3"/>
		</LinearLayout>
		<TextView  
		    android:id="@+id/temp3"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:layout_marginLeft="10dip"
		    android:layout_marginRight="10dip"
		    android:gravity="left"/>
		<Button
  			android:id="@+id/but_stop_copy" 
  			android:text="@string/str_copystop"
			android:layout_height="40dip" 
			android:layout_width="200dip" 
			android:textColor="@android:color/black"
			android:layout_gravity="center"/>  
</LinearLayout>
